// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server/paymentProviders/transferwise/webhook handleTransferRefund Expense was already PAID (has Transactions) should fully refund the transactions if refunded amount matches the amount paid 1`] = `
"
| kind                  | description                                               | type   | amount | currency | amountInHostCurrency | hostCurrency | netAmountInCollectiveCurrency | To                      | From                    | Host        | data.refundWiseEventTimestamp |
| --------------------- | --------------------------------------------------------- | ------ | ------ | -------- | -------------------- | ------------ | ----------------------------- | ----------------------- | ----------------------- | ----------- | ----------------------------- |
| EXPENSE               | Refund of \\"Invoice\\"                                       | CREDIT | 10000  | USD      | 10000                | USD          | 10000                         | Collective              | User                    | Fiscal Host |                               |
| EXPENSE               | Refund of \\"Invoice\\"                                       | DEBIT  | -10000 | USD      | -10000               | USD          | -10000                        | User                    | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_FEE | Refund of \\"Other Payment Processor payment processor fee\\" | CREDIT | 1000   | USD      | 1000                 | USD          | 1000                          | Collective              | Other Payment Processor | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE | Refund of \\"Other Payment Processor payment processor fee\\" | DEBIT  | -1000  | USD      | -1000                | USD          | -1000                         | Other Payment Processor | Collective              | NULL        |                               |
| EXPENSE               | Invoice                                                   | CREDIT | 10000  | USD      | 10000                | USD          | 10000                         | User                    | Collective              | NULL        | 2024-10-11T11:27:11.421Z      |
| EXPENSE               | Invoice                                                   | DEBIT  | -10000 | USD      | -10000               | USD          | -10000                        | Collective              | User                    | Fiscal Host | 2024-10-11T11:27:11.421Z      |
| PAYMENT_PROCESSOR_FEE | Other Payment Processor payment processor fee             | CREDIT | 1000   | USD      | 1000                 | USD          | 1000                          | Other Payment Processor | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_FEE | Other Payment Processor payment processor fee             | DEBIT  | -1000  | USD      | -1000                | USD          | -1000                         | Collective              | Other Payment Processor | Fiscal Host |                               |"
`;

exports[`server/paymentProviders/transferwise/webhook handleTransferRefund Expense was already PAID (has Transactions) should partially refund the transactions if refunded amount is less than the amount paid 1`] = `
"
| kind                    | description                                               | type   | amount | currency | amountInHostCurrency | hostCurrency | netAmountInCollectiveCurrency | To                      | From                    | Host        | data.refundWiseEventTimestamp |
| ----------------------- | --------------------------------------------------------- | ------ | ------ | -------- | -------------------- | ------------ | ----------------------------- | ----------------------- | ----------------------- | ----------- | ----------------------------- |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | CREDIT | 10000  | USD      | 10000                | USD          | 10000                         | Collective              | User                    | Fiscal Host |                               |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | DEBIT  | -10000 | USD      | -10000               | USD          | -10000                        | User                    | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | CREDIT | 500    | USD      | 500                  | USD          | 500                           | Collective              | Fiscal Host             | Fiscal Host |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | DEBIT  | -500   | USD      | -500                 | USD          | -500                          | Fiscal Host             | Collective              | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | CREDIT | 500    | USD      | 500                  | USD          | 500                           | Collective              | Other Payment Processor | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | DEBIT  | -500   | USD      | -500                 | USD          | -500                          | Other Payment Processor | Collective              | NULL        |                               |
| EXPENSE                 | Invoice                                                   | CREDIT | 10000  | USD      | 10000                | USD          | 10000                         | User                    | Collective              | NULL        | 2024-10-11T11:27:11.421Z      |
| EXPENSE                 | Invoice                                                   | DEBIT  | -10000 | USD      | -10000               | USD          | -10000                        | Collective              | User                    | Fiscal Host | 2024-10-11T11:27:11.421Z      |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | CREDIT | 1000   | USD      | 1000                 | USD          | 1000                          | Other Payment Processor | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | DEBIT  | -1000  | USD      | -1000                | USD          | -1000                         | Collective              | Other Payment Processor | Fiscal Host |                               |"
`;

exports[`server/paymentProviders/transferwise/webhook handleTransferRefund Expense was already PAID (has Transactions) should work with Collectives that have a different currency than the Host 1`] = `
"
| kind                    | description                                               | type   | amount | currency | amountInHostCurrency | hostCurrency | netAmountInCollectiveCurrency | To                      | From                    | Host        | data.refundWiseEventTimestamp |
| ----------------------- | --------------------------------------------------------- | ------ | ------ | -------- | -------------------- | ------------ | ----------------------------- | ----------------------- | ----------------------- | ----------- | ----------------------------- |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | CREDIT | 10000  | EUR      | 11900                | USD          | 10000                         | Collective              | User                    | Fiscal Host |                               |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | DEBIT  | -10000 | EUR      | -11900               | USD          | -10000                        | User                    | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | CREDIT | 500    | EUR      | 595                  | USD          | 500                           | Collective              | Fiscal Host             | Fiscal Host |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | DEBIT  | -500   | EUR      | -595                 | USD          | -500                          | Fiscal Host             | Collective              | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | CREDIT | 500    | EUR      | 595                  | USD          | 500                           | Collective              | Other Payment Processor | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | DEBIT  | -500   | EUR      | -595                 | USD          | -500                          | Other Payment Processor | Collective              | NULL        |                               |
| EXPENSE                 | Invoice                                                   | CREDIT | 10000  | EUR      | 11900                | USD          | 10000                         | User                    | Collective              | NULL        | 2024-10-11T11:27:11.421Z      |
| EXPENSE                 | Invoice                                                   | DEBIT  | -10000 | EUR      | -11900               | USD          | -10000                        | Collective              | User                    | Fiscal Host | 2024-10-11T11:27:11.421Z      |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | CREDIT | 1000   | EUR      | 1190                 | USD          | 1000                          | Other Payment Processor | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | DEBIT  | -1000  | EUR      | -1190                | USD          | -1000                         | Collective              | Other Payment Processor | Fiscal Host |                               |"
`;

exports[`server/paymentProviders/transferwise/webhook handleTransferRefund Expense was already PAID (has Transactions) should work with an expense that was paid multiple times 1`] = `
"
| kind                    | description                                               | type   | amount | currency | amountInHostCurrency | hostCurrency | netAmountInCollectiveCurrency | To                      | From                    | Host        | data.refundWiseEventTimestamp |
| ----------------------- | --------------------------------------------------------- | ------ | ------ | -------- | -------------------- | ------------ | ----------------------------- | ----------------------- | ----------------------- | ----------- | ----------------------------- |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | CREDIT | 10100  | USD      | 10100                | USD          | 10100                         | Collective              | User                    | Fiscal Host |                               |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | DEBIT  | -10100 | USD      | -10100               | USD          | -10100                        | User                    | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | CREDIT | 500    | USD      | 500                  | USD          | 500                           | Collective              | Fiscal Host             | Fiscal Host |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | DEBIT  | -500   | USD      | -500                 | USD          | -500                          | Fiscal Host             | Collective              | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | CREDIT | 500    | USD      | 500                  | USD          | 500                           | Collective              | Other Payment Processor | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | DEBIT  | -500   | USD      | -500                 | USD          | -500                          | Other Payment Processor | Collective              | NULL        |                               |
| EXPENSE                 | Invoice                                                   | CREDIT | 10100  | USD      | 10100                | USD          | 10100                         | User                    | Collective              | NULL        | 2024-10-12T00:00:00.000Z      |
| EXPENSE                 | Invoice                                                   | DEBIT  | -10100 | USD      | -10100               | USD          | -10100                        | Collective              | User                    | Fiscal Host | 2024-10-12T00:00:00.000Z      |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | CREDIT | 1000   | USD      | 1000                 | USD          | 1000                          | Other Payment Processor | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | DEBIT  | -1000  | USD      | -1000                | USD          | -1000                         | Collective              | Other Payment Processor | Fiscal Host |                               |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | CREDIT | 10000  | USD      | 10000                | USD          | 10000                         | Collective              | User                    | Fiscal Host |                               |
| EXPENSE                 | Refund of \\"Invoice\\"                                       | DEBIT  | -10000 | USD      | -10000               | USD          | -10000                        | User                    | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | CREDIT | 500    | USD      | 500                  | USD          | 500                           | Collective              | Fiscal Host             | Fiscal Host |                               |
| PAYMENT_PROCESSOR_COVER | Cover of payment processor fee for refund                 | DEBIT  | -500   | USD      | -500                 | USD          | -500                          | Fiscal Host             | Collective              | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | CREDIT | 500    | USD      | 500                  | USD          | 500                           | Collective              | Other Payment Processor | Fiscal Host |                               |
| PAYMENT_PROCESSOR_FEE   | Refund of \\"Other Payment Processor payment processor fee\\" | DEBIT  | -500   | USD      | -500                 | USD          | -500                          | Other Payment Processor | Collective              | NULL        |                               |
| EXPENSE                 | Invoice                                                   | CREDIT | 10000  | USD      | 10000                | USD          | 10000                         | User                    | Collective              | NULL        | 2024-10-11T11:27:11.421Z      |
| EXPENSE                 | Invoice                                                   | DEBIT  | -10000 | USD      | -10000               | USD          | -10000                        | Collective              | User                    | Fiscal Host | 2024-10-11T11:27:11.421Z      |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | CREDIT | 1000   | USD      | 1000                 | USD          | 1000                          | Other Payment Processor | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_FEE   | Other Payment Processor payment processor fee             | DEBIT  | -1000  | USD      | -1000                | USD          | -1000                         | Collective              | Other Payment Processor | Fiscal Host |                               |"
`;

exports[`server/paymentProviders/transferwise/webhook handleTransferRefund Expense was still in PROCESSING (has no Transactions) should create a Payment Processor Fee debit for the difference if partially refunded 1`] = `
"
| kind                  | description                                   | type   | amount | currency | amountInHostCurrency | hostCurrency | netAmountInCollectiveCurrency | To                      | From                    | Host        | data.refundWiseEventTimestamp |
| --------------------- | --------------------------------------------- | ------ | ------ | -------- | -------------------- | ------------ | ----------------------------- | ----------------------- | ----------------------- | ----------- | ----------------------------- |
| PAYMENT_PROCESSOR_FEE | Other Payment Processor payment processor fee | CREDIT | 1000   | USD      | 1000                 | USD          | 1000                          | Other Payment Processor | Collective              | NULL        |                               |
| PAYMENT_PROCESSOR_FEE | Other Payment Processor payment processor fee | DEBIT  | -1000  | USD      | -1000                | USD          | -1000                         | Collective              | Other Payment Processor | Fiscal Host |                               |"
`;
